syntax = "proto3";

package chat.v1;

import "google/api/resource.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";
import "malonaz/codegen/model/v1/model.proto";

option go_package = "github.com/malonaz/sgpt/genproto/chat/v1";

// A chat represents a conversation between a [contact][user.v1.Contact] and an agent.
message Chat {
  option (google.api.resource) = {
    type: "chat.sgpt.com/Chat"
    pattern: "chats/{chat}"
    singular: "chat"
    plural: "chats"
  };

  option (malonaz.codegen.model.v1.model_opts) = {};

  // The resource name of the chat.
  string name = 1;

  // The creation timestamp of the chat.
  google.protobuf.Timestamp create_time = 2;
  // The last update timestamp of the chat.
  google.protobuf.Timestamp update_time = 3;
  // The deletion timestamp of the chat.
  google.protobuf.Timestamp delete_time = 4 [(malonaz.codegen.model.v1.field_opts).nullable = true];

  // Metadata for this chat.
  ChatMetadata metadata = 5 [(malonaz.codegen.model.v1.field_opts).as_proto_bytes = true];
}

// Metadata for a chat.
message ChatMetadata {}
